--- a/conf/application.conf
+++ b/conf/application.conf
@@ -8,7 +8,7 @@
 # This must be changed for production, but we recommend not changing it in this file.
 #
 # See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
-play.crypto.secret = "changeme"
+play.crypto.secret = "=CpmuQ]aCv@K>ruG=?N4Wq<trB?ChK0Em_BaDySc<[cKOM1_;bM48eDnz@hIK3P<"
 
 # The application languages
 # ~~~~~
